# taco

./: .gitignore  .gitmodules  CMakeLists.txt  install_log  s.sh
DISTAL/: CMakeLists.txt
DISTAL/aot/: compile.cpp
DISTAL/core/: compiler_utils.cpp
DISTAL/include/: distal-compiler-aot.h  distal-compiler-core.h  distal-compiler-jit.h  distal-runtime.cuh  distal-runtime.h
DISTAL/include/runtime/: cudalibs.h  error.h  hdf5_utils.h  leaf_kernels.cuh  leaf_kernels.h  legion_tensor.h  string_utils.h  taco_legion_header.h  taco_mapper.h  validate.cuh
DISTAL/jit/: compile.cpp  deps.h.in
DISTAL/runtime/: cudalibs.cu  error.cpp  hdf5_utils.cpp  taco_legion_header.cpp  taco_mapper.cpp
apps/: CMakeLists.txt
apps/DISTAL-JIT/: CMakeLists.txt  main.cc
apps/gemm/: CMakeLists.txt  main.cpp
hanglog/: script.err
legion/: .gitignore  CMakeLists.txt  compiler  dsl_mapper.h  install.md  install_tblis.md  my_mapper.cc  my_mapper_perf.cc
legion/cannonMM/: main.cpp  my_mapper.h  taco-generated.cpp  taco-generated.cu  taco-generated.h
legion/chemTest/: main.cpp  taco-generated.cpp  taco-generated.h
legion/cmake/: FindTBLIS.cmake  FindTCI.cmake
legion/compiler/: MSpace.cpp  a.out  algorithm.cpp  expert.py  lex.yy.c  myalgorithm.h  parser.y  ptr.py  scanner.l  tree.cpp  tree.hpp  y.output  y.tab.c  y.tab.h
legion/cosma/: main.cpp  taco-generated.cu
legion/fileio/: tensor_to_hdf5.cpp
legion/format-converter/: main.cpp  taco-generated.cpp  taco-generated.h
legion/future-bug/: main.cpp
legion/future-test/: main.cpp
legion/handwritten-spmv/: taco-generated.cpp
legion/include/: distal_blas.h  dummy_read.h  fill.h  hdf5_utils.h  leaf_kernels.cuh  leaf_kernels.h  legion_string_utils.h  legion_tensor.h  legion_utils.h  shard.h  string_utils.h  taco_legion_header.h  taco_mapper.h  task_ids.h  validate.h
legion/include/taco/: version.h
legion/innerprod/: main.cpp  taco-generated.cpp  taco-generated.h
legion/johnsonMM/: main.cpp
legion/matvec-adapt/: main.cpp
legion/mttkrp/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.h
legion/pummaMM/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh
legion/sddmm/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/solomonikMM/: main.cpp  my_mapper.cc  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spadd3/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spinnerprod/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spmm/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spmttkrp/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spmv/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h  taco-header.h
legion/spttv/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.cuh  taco-generated.h
legion/spvecadd/: main.cpp  taco-generated.cpp  taco-generated.h
legion/src/: cudalibs.cu  dummy_read.cpp  error.cpp  hdf5_utils.cpp  legion_tensor.cpp  legion_utils.cpp  taco_legion_header.cpp  taco_legion_header.cu  taco_mapper.cpp
legion/summaMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/tensors/: test-3-tensor.dds.hdf5  test-3-tensor.dds.hdf5.h5dump  test-3-tensor.dss.hdf5  test-3-tensor.dss.hdf5.h5dump  test-3-tensor.hdf5  test-3-tensor.hdf5.h5dump  test-3-tensor.sds.hdf5.h5dump  test-3-tensor.sss.hdf5  test-3-tensor.sss.hdf5.h5dump  test-3-tensor.tns  test-mat-holes.csc.hdf5  test-mat-holes.csc.hdf5.h5dump  test-mat-holes.csr.hdf5  test-mat-holes.csr.hdf5.h5dump  test-mat-holes.dcsr.hdf5  test-mat-holes.dcsr.hdf5.h5dump  test-mat-holes.hdf5  test-mat-holes.hdf5.h5dump  test-mat-holes.sd.hdf5.h5dump  test-mat-holes.tns  test-vec-full.hdf5  test-vec-full.hdf5.h5dump  test-vec-full.vec.hdf5  test-vec-full.vec.hdf5.h5dump  test-vec-sparse.hdf5  test-vec-sparse.hdf5.h5dump  test-vec-sparse.tns  test-vec-sparse.vec.hdf5  test-vec-sparse.vec.hdf5.h5dump
legion/test/: test-distal-runtime-lib.cpp  test.cpp  test.h
legion/ttmc/: main.cpp
legion/ttv/: main.cpp  taco-generated.cpp  taco-generated.cu  taco-generated.h
log/: slurm-11547.out  slurm-11548.out  slurm-11551.out  slurm-11555.out  slurm-11588.out  slurm-11592.out  slurm-11624.out  slurm-12351.out
petsc/: Makefile  benchmark.cpp  configure_petsc.py  install_petsc_steps.sh  petsc-converter.cpp
sc-2022-result-logs/: ctf-interpreted-spmttkrp-16-nodes.out  ctf-sddmm-16-nodes.out  ctf-spadd3-16-nodes.out  ctf-spmm-16-nodes.out  ctf-spmttkrp-16-nodes.out  ctf-spmv-16-nodes.out  ctf-spttv-16-nodes.out  distal-sddmm-16-nodes.out  distal-sddmm-32-gpus.out  distal-spadd3-16-nodes.out  distal-spadd3-32-gpus.out  distal-spinnerprod-16-nodes.out  distal-spmm-16-nodes.out  distal-spmm-32-gpus.out  distal-spmttkrp-16-nodes.out  distal-spmttkrp-32-gpus.out  distal-spmv-16-nodes.out  distal-spmv-8-gpus.out  distal-spttv-16-nodes.out  distal-spttv-32-gpus.out  distalbatched-spmm-32-gpus.out  petsc-spadd3-16-nodes.out  petsc-spmm-16-nodes-0.out  petsc-spmm-16-nodes-1.out  petsc-spmm-16-nodes-2.out  petsc-spmm-16-nodes.out  petsc-spmm-32-gpus.out  petsc-spmv-16-nodes.out  petsc-spmv-8-gpus.out  spmv-banded-weak-scale-64-nodes.out  trilinis-spmv-16-nodes-0.out  trilinis-spmv-16-nodes-1.out  trilinis-spmv-16-nodes-2.out  trilinis-spmv-16-nodes-3.out  trilinos-spadd3-16-nodes.out  trilinos-spadd3-32-gpus.out  trilinos-spmm-16-nodes.out  trilinos-spmm-32-gpus.out  trilinos-spmv-16-nodes.out  trilinos-spmv-8-gpus.out
scripts/: benchkinds.py  benchmark.py  benchmark_lassen.py  benchmark_sapling.py  debug_hang.py  debug_install.py  draw.py  dump_all_backtraces.sh  dump_node_backtraces.sh  find_lassen_nodes.py  gen_plots.py  install.py  install_lassen.py  install_lassen_reproduce_hang.py  registry.py  (+13 more)
trilinos/: CMakeLists.txt  ascii2binary.cpp  benchmark.cpp  build_trilinos.sh  convert.py  trilinos_make_wrapper.sh  trilinos_run_wrapper.sh
(+70 files in other folders)
